# Q

./: .gitignore  Cargo.toml  DETAILED_README.md  GIT_ACCOUNT_SETUP.md  README.md  world_generation_refactor_plan.md
subsystems/mvp/: #progressions.txt#  .#progressions.txt  .gitignore  Cargo.toml  INVENTORY_TEST.md  MVP_BRAINSTORM.md  README.md  TODO.txt  frontend_todo.md  progressions.txt  run_tests.sh
subsystems/mvp/src/: cli.rs  game_state.rs  land_view.rs  lib.rs  main.rs  terrain_view.rs  types.rs  web.rs  world.rs
subsystems/mvp/src/game/: character.rs  combat.rs  commands.rs  game_state.rs  land_view.rs  mod.rs  world.rs
subsystems/mvp/src/game/crafting/: content.rs  instance.rs  item_def.rs  materials.rs  mod.rs  quality.rs  (+4 more)
subsystems/mvp/src/web/: display.rs  mod.rs  serialization.rs  state_builder.rs  types.rs
subsystems/mvp/static/: app.js  index.html  recipes.css  recipes.html  recipes.js  style.css
subsystems/mvp/tests/: README_TESTS.md  e2e_basic_movement.txt  e2e_carcass_drops.txt  e2e_combat_flee.txt  e2e_combat_victory.txt  e2e_command_aliases.txt  e2e_craftable_query.txt  e2e_crafting_pickup.txt  e2e_crafting_simple_recipe.txt  e2e_drop_pickup.txt  e2e_early_progression.txt  e2e_edge_cases.txt  e2e_equipment.txt  e2e_equipment_simple.txt  e2e_forge_crafting.txt  e2e_full_playthrough.txt  e2e_inventory_status.txt  e2e_placement.txt  e2e_progression_flow.txt  e2e_stat_bonuses.txt
subsystems/time/: Cargo.toml  README.md
subsystems/time/src/: commands.rs  lib.rs  main.rs  time.rs  web.rs
subsystems/time/static/: app.js  index.html  style.css
(+103 files in other folders)
