[package]
name = "mvp"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mvp"
path = "src/main.rs"

[lib]
name = "mvp"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }
clap = { version = "4.5", features = ["derive"] }
rand = "0.8"